# STM32MP157_Cortex_M4_GCC_CMAKE_Linux

./: .gitignore  CMakeLists.txt  build.sh
Drivers/: CMakeLists.txt
Drivers/BSP/: CMakeLists.txt
Drivers/CMSIS/: CMakeLists.txt
Drivers/CMSIS/Device/ST/STM32MP1xx/: CMakeLists.txt
Drivers/STM32MP1xx_HAL_Driver/: CMakeLists.txt
Drivers/SYSTEM/: CMakeLists.txt
User/: CMakeLists.txt
User/src/: main.c
