ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/STM32MP1xx_HAL_Driver ${LIBRARY_OUTPUT_PATH}/Drivers/STM32MP1xx_HAL_Driver)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/CMSIS ${LIBRARY_OUTPUT_PATH}/Drivers/CMSIS)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/SYSTEM ${LIBRARY_OUTPUT_PATH}/Drivers/SYSTEM)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/BSP ${LIBRARY_OUTPUT_PATH}/Drivers/BSP)
